test/overlay/srs/srs-1/kustomization.yml
apiVersion: kustomize.config.k8s.io/v1beta1
kind: Kustomization
namespace: srs-1

resources:
  - ../../../base
  - allow-namespace-nut-4.yml
  - allow-namespace-nut-5.yml
